--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
   <title>My First Website</title>
+  <meta charset="UTF-8">
+  <style>
+    body { font-family: Arial; background:#f5f5f5; text-align:center; padding:40px; }
+    h1 { color:#2c3e50; }
+    p { color:#555; }
+    button { padding:12px 20px; font-size:16px; background:#27ae60; color:white; border:none; border-radius:6px; }
+  </style>
 </head>
 <body>
   <h1>Hello Himanshu</h1>
   <p>Ye meri pehli website hai.</p>
   <p>Website GitHub Pages par free me live ho rahi hai.</p>
+  <button>Join Now</button>
 </body>
 </html>
