Update Firebase configuration with new credentials

--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
 
 <script>
   // 🔴 YAHAN APNA FIREBASE CONFIG PASTE KARO
-  const firebaseConfig = {
-    apiKey: "PASTE_HERE",
-    authDomain: "PASTE_HERE",
-    projectId: "PASTE_HERE",
-    storageBucket: "PASTE_HERE",
-    messagingSenderId: "PASTE_HERE",
-    appId: "PASTE_HERE"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCSKLOKjHWNImv5bmxzOTCthvQd8iWa6aQ",
+  authDomain: "big-d28e3.firebaseapp.com",
+  projectId: "big-d28e3",
+  storageBucket: "big-d28e3.firebasestorage.app",
+  messagingSenderId: "509862839346",
+  appId: "1:509862839346:web:ec80fc33a33eb19610e82b",
+  measurementId: "G-1P2EMECLBT"
+};
 
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
