--- a/login.html
+++ b/login.html
@@ -22,14 +22,15 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "PASTE_HERE",
-      authDomain: "PASTE_HERE",
-      projectId: "PASTE_HERE",
-      storageBucket: "PASTE_HERE",
-      messagingSenderId: "PASTE_HERE",
-      appId: "PASTE_HERE"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyCSKLOKjHWNImv5bmxzOTCthvQd8iWa6aQ",
+  authDomain: "big-d28e3.firebaseapp.com",
+  projectId: "big-d28e3",
+  storageBucket: "big-d28e3.firebasestorage.app",
+  messagingSenderId: "509862839346",
+  appId: "1:509862839346:web:ec80fc33a33eb19610e82b",
+  measurementId: "G-1P2EMECLBT"
+};
     firebase.initializeApp(firebaseConfig);
 
     function login(){
