Add link to Color Trading page in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -34,6 +34,9 @@
   <h2>Welcome to BIGPRO</h2>
   <p>Login ho chuka hai</p>
   <button onclick="logout()">Logout</button>
+  
+  <br><br>
+<a href="color.html">Go to Color Trading</a>
 </div>
 
 <script>
