--- a/login.html
+++ b/login.html
@@ -9,9 +9,7 @@
 body{
   margin:0;
   min-height:100vh;
-  background:
-    radial-gradient(circle at top,#6a00ff,#3a006f 60%,#1a002f),
-    url('bg-stars.png');
+  background: url("images/862464429d63305ff1445ec4c52726.jpg") no-repeat center center fixed;
   background-size:cover;
   display:flex;
   justify-content:center;
