Update email icon in login page

--- a/login.html
+++ b/login.html
@@ -124,7 +124,7 @@
     <h2>Login to BIGPRO</h2>
 
     <div class="input-box">
-      <img src="images/email.png" alt="email">
+      <img src="images/images/Picsart_26-01-14_11-27-08-523.png" alt="email">
       <input type="email" placeholder="Enter your email">
     </div>
 
