--- a/login.html
+++ b/login.html
@@ -29,16 +29,27 @@
   width:92%;
   max-width:430px;
   padding:30px 25px;
-  border-radius:24px;
-  background: linear-gradient(180deg, #2b0066, #140033);
-  border:1px solid rgba(255,120,255,0.6);
+  border-radius:28px;
+
+  background: linear-gradient(180deg,
+    rgba(30,40,160,0.9),
+    rgba(60,0,160,0.8),
+    rgba(20,20,80,0.95)
+  );
+
+  border:2px solid rgba(255,100,255,0.5);
+
   box-shadow:
-    0 0 20px rgba(255,0,255,0.6),
-    0 0 40px rgba(255,0,255,0.5),
-    0 0 60px rgba(255,0,255,0.4);
+    0 0 25px rgba(255,0,200,0.7),
+    0 0 60px rgba(255,150,0,0.5),
+    0 15px 35px rgba(0,0,0,0.6),
+    inset 0 0 30px rgba(255,255,255,0.15);
+
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
+  transform: perspective(800px) translateZ(10px);
   color:white;
-  position:relative;
-  overflow:hidden;
 }
 
 /* Neon glow edge */
