--- a/login.html
+++ b/login.html
@@ -1,186 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BIGPRO Login</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+<meta charset="UTF-8">
+<title>BIGPRO Login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      min-height: 100vh;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
 
-    body {
-      background: url("images/862464429d63305ff1445ec4c5272682.jpg") no-repeat center center;
-      background-size: cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
+body{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:
+   radial-gradient(circle at top,#ff4fd8,transparent 40%),
+   linear-gradient(135deg,#12004a,#2b007a,#ff008c);
+  background-size:cover;
+}
+
 .card{
   width:92%;
   max-width:430px;
   padding:30px 25px;
-  border-radius:28px;
-
-  background: linear-gradient(180deg,
-    rgba(30,40,160,0.9),
-    rgba(60,0,160,0.8),
-    rgba(20,20,80,0.95)
-  );
-
-  border:2px solid rgba(255,100,255,0.5);
-
-  box-shadow:
-    0 0 25px rgba(255,0,200,0.7),
-    0 0 60px rgba(255,150,0,0.5),
-    0 15px 35px rgba(0,0,0,0.6),
-    inset 0 0 30px rgba(255,255,255,0.15);
-
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-
-  transform: perspective(800px) translateZ(10px);
-  color:white;
-}
-
-/* Neon glow edge */
-.card::before{
-  content:"";
-  position:absolute;
-  inset:-2px;
   border-radius:26px;
-  background: linear-gradient(45deg,
-    #ff00ff,
-    #ffcc00,
-    #ff00ff,
-    #00ffff,
-    #ff00ff);
-  z-index:-1;
-  filter: blur(12px);
+  background:linear-gradient(180deg,rgba(0,40,120,.7),rgba(80,0,150,.7));
+  backdrop-filter:blur(10px);
+  border:1px solid rgba(255,255,255,.15);
+  box-shadow:
+   0 0 25px rgba(255,0,255,.5),
+   0 0 50px rgba(0,200,255,.4);
+  color:white;
+  text-align:center;
+  position:relative;
 }
-    
-    .logo {
-      text-align: center;
-      font-size: 32px;
-      font-weight: 800;
-      color: #ffcc00;
-      margin-bottom: 5px;
-    }
 
-    h2 {
-      text-align: center;
-      margin: 10px 0 20px;
-    }
+.logo{
+  font-size:32px;
+  font-weight:800;
+  color:#ffcc00;
+  margin-bottom:5px;
+  text-shadow:0 0 15px rgba(255,200,0,.8);
+}
 
-    .input-box {
-      background: rgba(60, 0, 90, 0.9);
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      padding: 12px 15px;
-      margin-bottom: 15px;
-    }
+h2{margin-bottom:20px;font-size:18px;color:#fff;}
 
-    .input-box img {
-      width: 22px;
-      margin-right: 10px;
-    }
+.input-box{
+  background:rgba(255,255,255,.08);
+  border-radius:14px;
+  display:flex;
+  align-items:center;
+  padding:12px 14px;
+  margin-bottom:15px;
+  border:1px solid rgba(255,255,255,.15);
+}
 
-    .input-box input {
-      background: none;
-      border: none;
-      outline: none;
-      color: white;
-      font-size: 16px;
-      width: 100%;
-    }
+.input-box img{
+  width:22px;
+  margin-right:10px;
+}
 
-    .btn {
-      width: 100%;
-      padding: 14px;
-      border: none;
-      border-radius: 25px;
-      background: linear-gradient(180deg, #ffd000, #ff9900);
-      color: black;
-      font-size: 18px;
-      font-weight: bold;
-      cursor: pointer;
-      margin: 10px 0;
-      box-shadow: 0 0 15px rgba(255, 200, 0, 0.5);
-    }
+.input-box input{
+  background:none;
+  border:none;
+  outline:none;
+  color:white;
+  font-size:16px;
+  width:100%;
+}
 
-    .center {
-      text-align: center;
-      margin-top: 10px;
-    }
+.btn{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:30px;
+  font-size:18px;
+  font-weight:700;
+  background:linear-gradient(90deg,#ffd000,#ff9900);
+  color:#000;
+  margin:10px 0 15px;
+  box-shadow:0 0 25px rgba(255,200,0,.9);
+}
 
-    .center span {
-      color: #ffcc00;
-      font-weight: bold;
-      cursor: pointer;
-    }
+.btn:active{transform:scale(.97);}
 
-    .bottom {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 15px;
-      color: #ffcc00;
-      font-size: 14px;
-    }
+a{color:#ffcc00;text-decoration:none;font-weight:600;}
 
-    .bottom div {
-      display: flex;
-      align-items: center;
-    }
+.footer{
+  margin-top:15px;
+  display:flex;
+  justify-content:space-between;
+  font-size:14px;
+}
 
-    .bottom img {
-      width: 18px;
-      margin-right: 6px;
-    }
-  </style>
+.footer div{
+  display:flex;
+  align-items:center;
+  gap:6px;
+}
+</style>
 </head>
-<body>
 
+<body>
   <div class="card">
     <div class="logo">BIGPRO</div>
     <h2>Login to BIGPRO</h2>
 
     <div class="input-box">
-      <img src="images/Picsart_26-01-14_11-27-08-523.png" alt="email">
+      <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png">
       <input type="email" placeholder="Enter your email">
     </div>
 
     <div class="input-box">
-      <img src="images/Picsart_26-01-14_11-23-55-340.png" alt="password">
+      <img src="https://cdn-icons-png.flaticon.com/512/3064/3064155.png">
       <input type="password" placeholder="Enter password">
     </div>
 
     <button class="btn">Login</button>
 
-    <div class="center">
-      New user? <span>Register here</span>
-    </div>
+    <div>New user? <a href="#">Register here</a></div>
 
-    <div class="bottom">
+    <div class="footer">
       <div>
-        <img src="images/Picsart_26-01-14_11-24-55-003.png" alt="help">
-        Forgot password
+        🔑 <span>Forgot password</span>
       </div>
       <div>
-        <img src="images/Picsart_26-01-14_11-25-46-724.png" alt="support">
-        Customer Service
+        🎧 <span>Customer Service</span>
       </div>
     </div>
   </div>
-
 </body>
 </html>
