--- a/login.html
+++ b/login.html
@@ -31,8 +31,8 @@ color:#888;
 }
 
 .tab.active{
-color:#d80027;
-border-bottom:3px solid #d80027;
+color:#ff6b6b;
+border-bottom:3px solid #ff6b6b;
 }
 
 .form{
